# gambit

./: .gitignore  CLAUDE.md  README.md  gambit.py  pyproject.toml
base_evidence/: __init__.py  gradcam_regions.py  integrated_gradients_regions.py
core/: __init__.py  allocator.py  base_evidence.py  device.py  game_modes.py  hypotheses.py  interaction.py  objective.py  reporting.py  runner.py  types.py  unit_space.py  visualization.py
docs/: CDEA_BLOCK_DIAGRAM.md  NEW_INSTANTIATION_GAME_GUIDE.md  PRELIMS_ALGORITHMS_LATEX.tex  PRELIMS_DOCS_INDEX.md  PRELIMS_EXPERIMENTS_AND_RESULTS_TEMPLATE.md  PRELIMS_IMPLEMENTATION_OVERVIEW.md  PRELIMS_LIMITATIONS_AND_MILESTONES.md  PRELIMS_METHOD_DETAILS.md
examples/: JUPYTER_GUIDE.md  README.md  RUN_STANFORD_DOGS_PIPELINE.md  contrastive_explanation.py  contrastive_explanation_ig.py
examples/notebooks/: cdea_contrastive_quickstart.ipynb  mask_visualization.ipynb  results_contrastive.ipynb  results_shift.ipynb
instantiations/contrastive/: __init__.py  allocator.py  objective.py
instantiations/shift/: __init__.py  allocator.py  biased_data.py  env.py  objective.py
modality/: __init__.py  grid_regions.py  visualize_keep_remove.py
scripts/: ablation_contrastive.py  eval_robust_shortcut.py  poc_all_datasets.py  run_experiments.py  train_backbone.py
tests/: conftest.py  test_contrastive_allocator_objective.py  test_game_modes.py  test_interaction.py  test_pass_conditions.py  test_shift_instantiation.py
